# makcu

./: API.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
discovery/: FINDINGS.md  test_button_mask.py
discovery/results/: verify_20260315_100500.json
examples/: basic.rs  benchmark.rs  comprehensive.rs  mock.rs
src/: device.rs  lib.rs
src/batch/: builder.rs
src/device/: buttons.rs  catch.rs  info.rs  locks.rs  mod.rs  movement.rs  stream.rs
src/error/: mod.rs
src/extras/: catch.rs  click.rs  events.rs  mod.rs  smooth.rs
src/protocol/: builder.rs  constants.rs  mod.rs  parser.rs
src/transport/: mock.rs  mod.rs  monitor.rs  reader.rs  serial.rs  writer.rs
src/types/: device_info.rs  lock.rs  mod.rs
